Setting : .gitignore에 package-lock.json 추가

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ dist-ssr
 # env file
 .env
 
+# package-lock.json
+package-lock.json
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
