--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "axios": "^1.7.7",
+    "d3-format": "^3.1.0",
+    "d3-time-format": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-financial-charts": "^2.0.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0"
   },
