--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "bootstrap": "^5.3.3",
     "d3-format": "^3.1.0",
     "d3-time-format": "^4.1.0",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
-    "socket.io-client": "^4.8.1",
     "react-financial-charts": "^2.0.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
