--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-financial-charts": "^2.0.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
+    "resize-observer-polyfill": "^1.5.1",
     "socket.io-client": "^4.8.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
