--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "@types/d3": "^7.4.3",
+    "@types/d3-cloud": "^1.2.9",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "d3": "^7.9.0",
+    "d3-cloud": "^1.2.7",
     "d3-format": "^3.1.0",
     "d3-time-format": "^4.1.0",
     "lucide-react": "^0.460.0",
