--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       # Docker 이미지 빌드
       - name: Build Docker image for frontend
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/stockey-react:latest .
+          docker build --build-arg VITE_SERVER_HOST=${{ secrets.VITE_SERVER_HOST }} -t ${{ secrets.DOCKER_USERNAME }}/stockey-react:latest .
 
       # Docker Hub에 푸시
       - name: Push Docker image to Docker Hub
