--- a/nginx.conf
+++ b/nginx.conf
@@ -26,10 +26,22 @@ http {
         # 백엔드 (Express) API 요청 처리
         location /api/ {
             proxy_pass http://stockey-express:3000;  # Express 백엔드 컨테이너로 요청 전달
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # WebSocket 요청 프록시
+        location /socket.io/ {
+            proxy_pass http://stockey-express:3000; # Express 서버로 전달
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
 }
