--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-financial-charts": "^2.0.1",
     "react-icons": "^5.3.0",
+    "react-indiana-drag-scroll": "^3.0.3-alpha",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
     "resize-observer-polyfill": "^1.5.1",
