--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "format:check": "prettier --check \"src/**/*.{js,jsx,json,css,scss}\""
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/material": "^6.1.9",
     "@types/d3": "^7.4.3",
     "@types/d3-cloud": "^1.2.9",
     "axios": "^1.7.7",
