--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "d3-cloud": "^1.2.7",
     "d3-format": "^3.1.0",
     "d3-time-format": "^4.1.0",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
