--- a/nginx.conf
+++ b/nginx.conf
@@ -30,7 +30,7 @@ http {
 
         # 백엔드 (Express) API 요청 처리
         location /api/ {
-            proxy_pass http://stockey-backends:3000;  # Express 백엔드 컨테이너로 요청 전달
+            proxy_pass http://stockey-backends;  # Express 백엔드 컨테이너로 요청 전달
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
